force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/Callout_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Callout_Configuration__c</fullName>
    <description>If applicable, the related Callout Configuration.</description>
    <label>Callout Configuration</label>
    <referenceTo>Callout_Configuration__mdt</referenceTo>
    <relationshipLabel>Integration Field Mappings</relationshipLabel>
    <relationshipName>Integration_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>