force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API Name that the data in the key from the integration should map to</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>