force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/ID_Field__c.field-meta.xml
<CustomField>
    <fullName>ID_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field that is the unique identifier for a record received from the integration</description>
    <label>ID Field</label>
    <type>Checkbox</type>
</CustomField>