force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/LWC_Column_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>LWC_Column_Data_Type__c</fullName>
    <description>The data type for the LWC column that will show the data.</description>
    <label>LWC Column Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>