force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/LWC_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Column_Name__c</fullName>
    <description>The column name to show in an LWC data table</description>
    <label>LWC Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>