force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/LWC_Column_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>LWC_Column_Sort_Order__c</fullName>
    <description>The order in which each data point will appear in the LWC data table. Lowest number starts on the left of the table.</description>
    <label>LWC Column Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>