force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/LWC_Type_Attributes__c.field-meta.xml
<CustomField>
    <fullName>LWC_Type_Attributes__c</fullName>
    <description>Type attributes for the data type that is shown in an LWC data table. For example, if you are showing a button in a cell, you can specify the variant (e.g. brand, destructive) in this field.</description>
    <label>LWC Type Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>