force-app/main/default/objects/Integration_Field_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>The API Name of the Object that holds the field that a data point maps to</description>
    <label>Salesforce Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>